--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,23 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      Ionic Blank
+    <ion-title text-center>
+      TechFerry
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  Welcome to Techferry
+  <form [formGroup]="attendance" (ngSubmit)="onSubmit()">
+    <ion-item>
+      <ion-label>Are you?</ion-label>
+      <ion-select formControlName="guests">
+        <ion-option value=1>Employee</ion-option>
+        <ion-option value=2>visitor</ion-option>
+      </ion-select>
+    </ion-item>
+    
+    <button ion-button type="submit" [disabled]="!attendance.valid">Submit</button>
+    
+  </form>
 </ion-content>
